--- a/apps/homepage/sample-env-secrets.yaml
+++ b/apps/homepage/sample-env-secrets.yaml
@@ -1,3 +1,6 @@
+# Only use this when you can't store secrets in something like Bitwarden Secrets
+# Manager or Hashicorp Vault
+
 apiVersion: v1
 kind: Secret
 metadata:
