--- a/apps/homepage/08-httproute.yaml
+++ b/apps/homepage/08-httproute.yaml
@@ -8,7 +8,7 @@ spec:
     - name: traefik-gateway
       namespace: traefik
   hostnames:
-    - home.local.zeroenet.cloud
+    - dashboard.zeroenet.cloud
   rules:
     - matches:
         - path:
