Adding longhorn & authentik traefik routes. Adding longhorn test.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 *.local.yaml
 *.dev.yaml
 *.override.yaml
+**/_manifest.yaml
 
 # ============================================================
 # 🪣 Helm build outputs and chart packages
