Updated lubelogger bookmark

--- a/apps/homepage/03-configmap.yaml
+++ b/apps/homepage/03-configmap.yaml
@@ -116,7 +116,7 @@ data:
             href: https://bookmarks.zeroenet.cloud
         - LubeLogger:
           - icon: lubelogger.png
-            href: https://lubelogger.zeroenet.cloud
+            href: https://cars.zeroenet.cloud
         - Tandoor:
           - icon: tandoor-recipes.svg
             href: https://recipes.zeroenet.cloud
