Added middlewares for secure headers and ip allowlisting to httproute for longhorn.

--- a/infrastructure/longhorn/httproute.yaml
+++ b/infrastructure/longhorn/httproute.yaml
@@ -14,6 +14,17 @@ spec:
         - path:
             type: PathPrefix
             value: /
+      filters:
+      - type: ExtensionRef
+        extensionRef:  # Headers Middleware Definition
+          group: traefik.io
+          kind: Middleware
+          name: secure-headers
+      - type: ExtensionRef 
+        extensionRef: # IP AllowList Middleware Definition
+          group: traefik.io
+          kind: Middleware
+          name: admin-ip-allowlist
       backendRefs:
         - name: longhorn-frontend
           port: 80
