--- a/infrastructure/longhorn/middlewares.yaml
+++ b/infrastructure/longhorn/middlewares.yaml
@@ -23,3 +23,13 @@ spec:
     sourceRange:
       - 10.0.0.0/8
       - 10.29.29.100
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: dashboard-auth
+  namespace: longhorn-system
+spec:
+  basicAuth:
+    secret: dashboard-auth-secret
