testing bookmarks change

--- a/apps/homepage/base/config/bookmarks.yaml
+++ b/apps/homepage/base/config/bookmarks.yaml
@@ -68,3 +68,6 @@
     - Amazon:
       - icon: amazon.svg
         href: https://amazon.com
+    - Petco:
+      - abbr: PTCO
+        href: https://petco.com
