bookmark argo test

--- a/apps/homepage/base/config/bookmarks.yaml
+++ b/apps/homepage/base/config/bookmarks.yaml
@@ -65,3 +65,6 @@
     - Amazon:
       - icon: amazon.svg
         href: https://amazon.com
+    - Reddit:
+      - icon: reddit.svg
+        href: https://reddit.com
