--- a/apps/homepage/base/config/settings.yaml
+++ b/apps/homepage/base/config/settings.yaml
@@ -39,6 +39,10 @@ layout:
     header: true
     style: row
     columns: 1
+  CI/CD:
+    header: true
+    style: row
+    columns: 1
   Storage:
     header: true
     style: row
